--- a/src/app/components/accueil/accueil.component.css
+++ b/src/app/components/accueil/accueil.component.css
@@ -1,4 +1,17 @@
-.banniere{
+.bande1{
     width: 100%;
-    height: 100%;
+    height: 100vh;
+
+    background-color: #689d71;
+    
+    color: #f0f0f0;
+    font-size: 25vh;
+    font-family: "Roboto", sans-serif;
+    text-align: center;
+}
+
+.bande1 span{
+    position: absolute;
+    left: 25vw;
+    top: 20vh;
 }
