--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -1,3 +1,3 @@
-<img class="banniere"
-src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.6435-9/156154437_4052056518194992_2942871802306980151_n.jpg?_nc_cat=102&ccb=1-5&_nc_sid=6e5ad9&_nc_ohc=DceRkZ0aaB0AX9gS39k&_nc_ht=scontent-cdg2-1.xx&oh=8bbf03371155b82f6cbc9a11d8170495&oe=61AF81E9"
-alt="banniere_ctc">
+<div class="bande1">
+    <span>Bienvenue</span>
+</div>
