--- a/src/app/components/side-menu/side-menu.component.css
+++ b/src/app/components/side-menu/side-menu.component.css
@@ -16,7 +16,7 @@
 
     padding: 2vh 0;
 
-    font-family: "Poppins", sans-serif;
+    font-family: "Roboto", sans-serif;
     color: #fff;
     font-size: 4vh;
     font-weight: 400px;
@@ -156,7 +156,7 @@
 
 .sidebar .sidebar-footer .profile .nom-complet {
     color: #fff;
-    font-family: "Poppins", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 2vh;
     font-weight: 400px;
 
@@ -179,7 +179,7 @@
     align-items: center;
 
     color: #fff;
-    font-family: "Poppins", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 2vh;
     font-weight: 400px;
 
