--- a/src/app/components/accueil/accueil.component.css
+++ b/src/app/components/accueil/accueil.component.css
@@ -15,6 +15,8 @@
         position: absolute;
         left: 25vw;
         top: 20vh;
+
+        animation: fadein 1s;
     }
 }
 
@@ -38,4 +40,9 @@
         left: 30vw;
         top: 10vh;
     }
+}
+
+@keyframes fadein {
+    from { opacity: 0; top: 10vh; }
+    to   { opacity: 1; top: 20vh; }
 }
