Message du site en construction

--- a/src/app/components/accueil/accueil.component.css
+++ b/src/app/components/accueil/accueil.component.css
@@ -6,17 +6,30 @@
         background-color: #689d71;
         
         color: #f0f0f0;
-        font-size: 25vh;
         font-family: "Roboto", sans-serif;
         text-align: center;
     }
-    
-    .bande1 span{
-        position: absolute;
-        left: 25vw;
-        top: 20vh;
 
-        animation: fadein 1s;
+    .bande1 .text {
+        position: absolute;
+        top: 25vh;
+        left: 30vw;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        animation: fadein 2s;
+    }
+    
+    .bande1 .titre{
+        font-size: 25vh;
+    }
+
+    .bande1 .sous-titre {
+        padding-top: 10vh;
+        font-size: 5vh;
+        font-style: italic;
     }
 }
 
@@ -43,6 +56,6 @@
 }
 
 @keyframes fadein {
-    from { opacity: 0; top: 10vh; }
-    to   { opacity: 1; top: 20vh; }
+    from { opacity: 0; top: 15vh; }
+    to   { opacity: 1; top: 25vh; }
 }
