--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -1,4 +1,6 @@
 <div class="bande1">
-    <span>Bienvenue</span>
-    <span>Le site est en cours de construction...</span>
+    <div class="text">
+        <span class="titre">Bienvenue</span>
+        <span class="sous-titre">Le site est en cours de construction...</span>
+    </div>
 </div>
