--- a/src/app/components/accueil/accueil.component.css
+++ b/src/app/components/accueil/accueil.component.css
@@ -1,16 +1,14 @@
 @media (min-width: 426px) {
-    .bande1{
+    .main{
         width: 100%;
         height: 100vh;
     
         background-color: #689d71;
-        
-        color: #f0f0f0;
-        font-family: "Roboto", sans-serif;
+
         text-align: center;
     }
 
-    .bande1 .text {
+    .main .text {
         position: absolute;
         top: 25vh;
         left: 30vw;
@@ -19,14 +17,17 @@
         flex-direction: column;
         align-items: center;
 
+        color: #f0f0f0;
+        font-family: "Roboto", sans-serif;
+
         animation: fadein 2s;
     }
     
-    .bande1 .titre{
+    .main .titre{
         font-size: 25vh;
     }
 
-    .bande1 .sous-titre {
+    .main .sous-titre {
         padding-top: 10vh;
         font-size: 5vh;
         font-style: italic;
@@ -36,7 +37,7 @@
 /* Responsive pour TELEPHONE */
 
 @media (max-width: 426px) {
-    .bande1{
+    .main{
         width: 100%;
         height: 100vh;
     
@@ -48,7 +49,7 @@
         text-align: center;
     }
 
-    .bande1 .text{
+    .main .text{
         position: absolute;
         left: 17vw;
         top: 40vh;
@@ -59,8 +60,9 @@
         animation: fadein-tel 2s;
     }
 
-    .bande1 .sous-titre {
+    .main .sous-titre {
         font-size: 2vh;
+        font-style: italic;
     }
 }
 
