Modification du css : sidebar au-dessus du reste

--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -1,4 +1,4 @@
-<div class="bande1">
+<div class="main">
     <div class="text">
         <span class="titre">Bienvenue</span>
         <span class="sous-titre">Le site est en cours de construction...</span>
