--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,4 +4,11 @@ app-footer {
 
     width: 100%;
     height: 10vh;
+
+    z-index: 0;
+}
+
+.layout app-side-menu {
+    position: absolute;
+    z-index: 1;
 }
