--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -2,5 +2,6 @@
     <div class="text">
         <span class="titre">Bienvenue</span>
         <span class="sous-titre">Le site est en cours de construction...</span>
+        <i class="fa fa-twitter-square"></i>
     </div>
 </div>
