--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,5 @@
 <div class="main">
     <div class="reseaux">
-        <i class="fab fa-instagram"></i>
-        Bonsoir
+        <i class="fab fa-twitter-square"></i>
     </div>
 </div>
