--- a/src/app/components/side-menu/side-menu.component.css
+++ b/src/app/components/side-menu/side-menu.component.css
@@ -25,12 +25,11 @@
     
     .sidebar .sidebar-header .sidebar-btn {
         position: absolute;
-        right: 2vw;
-        height: 4vh;
-        width: 2vw;
+        right: 1.75vw;
+        height: 3.5vh;
+        width: 4vh;
     
         text-align: center;
-        font-size: 50%;
     
         border-radius: 5px;
     
@@ -47,12 +46,6 @@
         background-color: #a5a5a5;
         color: #11101d;
         cursor: pointer;
-    }
-    
-    .sidebar .sidebar-header .sidebar-btn mat-icon {
-        position: absolute;
-        top: 0.5vh;
-        left: 0.3vw;
     }
     
     .sidebar .sidebar-items {
@@ -188,7 +181,7 @@
     }
     
     .sidebar .sidebar-footer .deconnexion mat-icon {
-        border-radius: 16px;
+        border-radius: 5px;
     
         transition: all 0.4s ease;
     }
