Correction mock side menu

--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -7,7 +7,7 @@
       [style.animation-timing-function]="animationTimingFunction"
       [style.animation-duration]="animationDuration">MENU</span>
       <div class="sidebar-btn" (click)="toggleMenu()">
-        <mat-icon>menu</mat-icon>
+        <mat-icon>menu_left</mat-icon>
       </div>
     </div>
     <ul class="sidebar-items">
