--- a/src/app/components/side-menu/side-menu.component.css
+++ b/src/app/components/side-menu/side-menu.component.css
@@ -1,256 +1,193 @@
-@media (min-width: 426px) {
-    .sidebar {
-        position: fixed;
-        height: 100vh;
+.sidebar {
+    position: fixed;
+    height: 100vh;
+
+    padding: 2vh 1vw;
+
+    background-color: #11101d;
+
+    transition: all 0.5s ease;
+}
+
+.sidebar .sidebar-header {
+    display: flex;
+    align-items: center;
+
+    padding: 2vh 0;
+
+    font-family: "Roboto", sans-serif;
+    color: #fff;
+    font-size: 4vh;
+    font-weight: 400px;
+}
+
+.sidebar .sidebar-header .sidebar-btn {
+    position: absolute;
+    right: 1.75vw;
+    height: 3.5vh;
+    width: 4vh;
+
+    text-align: center;
+
+    border-radius: 5px;
+
+    transition: all 0.4s ease;
+}
+
+.sidebar .sidebar-header .sidebar-btn:hover {
+    background-color: #f0f0f0;
+    color: #11101d;
+    cursor: pointer;
+}
+
+.sidebar .sidebar-header .sidebar-btn:active {
+    background-color: #a5a5a5;
+    color: #11101d;
+    cursor: pointer;
+}
+
+.sidebar .sidebar-items {
+    display: flex;
+    flex-direction: column;
+
+    width: 100%;
+
+    padding: 0;
+}
+
+.sidebar .sidebar-items li {
+    padding: 2vh 0;
+    list-style: none;
+    position: relative;
+
+    white-space: nowrap;
+}
+
+.sidebar .sidebar-items li input {
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding-left: 1vw;
+
+    height: 4vh;
+    width: 90%;
+
+    border-radius: 12px;
+    border: none;
+    outline: none;
+    background-color: #1d1b31;
     
-        padding: 2vh 1vw;
-    
-        background-color: #11101d;
-        opacity: 90%;
-    
-        transition: all 0.5s ease;
-    }
-    
-    .sidebar .sidebar-header {
-        display: flex;
-        align-items: center;
-    
-        padding: 2vh 0;
-    
-        font-family: "Roboto", sans-serif;
-        color: #fff;
-        font-size: 4vh;
-        font-weight: 400px;
-    }
-    
-    .sidebar .sidebar-header .sidebar-btn {
-        position: absolute;
-        right: 1.75vw;
-        height: 3.5vh;
-        width: 4vh;
-    
-        text-align: center;
-    
-        border-radius: 5px;
-    
-        transition: all 0.4s ease;
-    }
-    
-    .sidebar .sidebar-header .sidebar-btn:hover {
-        background-color: #f0f0f0;
-        color: #11101d;
-        cursor: pointer;
-    }
-    
-    .sidebar .sidebar-header .sidebar-btn:active {
-        background-color: #a5a5a5;
-        color: #11101d;
-        cursor: pointer;
-    }
-    
-    .sidebar .sidebar-items {
-        display: flex;
-        flex-direction: column;
-    
-        width: 100%;
-    
-        padding: 0;
-    }
-    
-    .sidebar .sidebar-items li {
-        padding: 2vh 0;
-        list-style: none;
-        position: relative;
-    
-        white-space: nowrap;
-    }
-    
-    .sidebar .sidebar-items li input {
-        position: absolute;
-        left: 0;
-        top: 0;
-        padding-left: 1vw;
-    
-        height: 4vh;
-        width: 90%;
-    
-        border-radius: 12px;
-        border: none;
-        outline: none;
-        background-color: #1d1b31;
-        
-        color: #f0f0f0;
-        font-size: 3vh;
-    }
-    
-    .sidebar .sidebar-items li a {
-        width: 100%;
-        height: 7vh;
-        border-radius: 12px;
-    
-        color: #fff;
-        text-decoration: none;
-    
-        display:flex;
-        align-items: center;
-    
-        font-family: "Poppins", sans-serif;
-        font-size: 3vh;
-        font-weight: 300px;
-    
-        transition: all 0.4s ease;
-    }
-    
-    .sidebar .sidebar-items li a span {
-        overflow: hidden;
-    }
-    
-    .sidebar .sidebar-items li a:hover {
-        color: #11101d;
-        background-color: #fff;
-    }
-    
-    .sidebar .sidebar-items li a mat-icon {
-        margin-right: 1vw;
-        margin-left: 1vw;
-    }
-    
-    .sidebar .sidebar-footer {
-        position: absolute;
-        bottom: 4vh;
-        left: 0;
-    
-        width: 100%;
-        height: 10%;
-        background-color: #060606;
-    }
-    
-    .sidebar .sidebar-footer .footer-items {
-        height: 5vh;
-        width: 100%;
-    
-        display: flex;
-    
-        position: absolute;
-        top: 25%;
-    }
-    
-    .sidebar .sidebar-footer .profile {
-        position: absolute;
-        left: 2%;
-    
-        width: 50%;
-        height: 5vh;
-    
-        display: flex;
-        align-items: center;
-    
-        white-space: nowrap;
-    }
-    
-    .sidebar .sidebar-footer .profile .nom-complet {
-        color: #fff;
-        font-family: "Roboto", sans-serif;
-        font-size: 2vh;
-        font-weight: 400px;
-    
-        position: absolute;
-        left: 3vw;
-    }
-    
-    .sidebar .sidebar-footer .profile .img-profile {
-        height: 5vh;
-        width: 5vh;
-        border-radius: 12px;
-    }
-    
-    .sidebar .sidebar-footer .deconnexion {
-        position: absolute;
-        right: 2vw;
-        top: 0.75vh;
-    
-        display: flex;
-        align-items: center;
-    
-        color: #fff;
-        font-family: "Roboto", sans-serif;
-        font-size: 2vh;
-        font-weight: 400px;
-    
-        transition: alll 0.4s ease;
-    }
-    
-    .sidebar .sidebar-footer .deconnexion mat-icon {
-        border-radius: 5px;
-    
-        transition: all 0.4s ease;
-    }
-    
-    .sidebar .sidebar-footer .deconnexion mat-icon:hover {
-        background-color: #f0f0f0;
-        color: #11101d;
-        cursor: pointer;
-    }
-    
-    .sidebar .sidebar-footer .deconnexion mat-icon:active {
-        background-color: #a5a5a5;
-        color: #11101d;
-        cursor: pointer;
-    }
-    
-    .sidebar .sidebar-footer .deconnexion .tooltip {
-        height: 4vh;
-        width: 7vw;
-    
-        border-radius: 6px;
-        background-color: #fff;
-        color: #11101d;
-        text-align: center;
-    
-        display:flex;
-        align-items: center;
-        padding-left: 1vw;
-    
-        transition: 0s;
-        opacity: 0;
-    
-        pointer-events: none;
-    
-        position: absolute;
-        transform: translateY(-50%);
-        top: 0;
-        left: 2vw;
-        z-index: 99;
-    }
-    
-    .sidebar .sidebar-footer .deconnexion:hover .tooltip {
-        transition: all 0.4s ease;
-        top: 50%;
-    
-        opacity: 1;
-        animation-name: fadeInOpacity;
-        animation-iteration-count: 1;
-        animation-timing-function: ease-in;
-        animation-duration: 0.3s;
-    }
-    
-    @keyframes fadeInOpacity {
-        0% {
-            opacity: 0;
-        }
-        100% {
-            opacity: 1;
-        }
-    }
-    
-    @keyframes fadeOutOpacity {
-        0% {
-            opacity: 1;
-        }
-        100% {
-            opacity: 0;
-        }
-    }
+    color: #f0f0f0;
+    font-size: 3vh;
+}
+
+.sidebar .sidebar-items li a {
+    width: 100%;
+    height: 7vh;
+    border-radius: 12px;
+
+    color: #fff;
+    text-decoration: none;
+
+    display:flex;
+    align-items: center;
+
+    font-family: "Poppins", sans-serif;
+    font-size: 3vh;
+    font-weight: 300px;
+
+    transition: all 0.4s ease;
+}
+
+.sidebar .sidebar-items li a span {
+    overflow: hidden;
+}
+
+.sidebar .sidebar-items li a:hover {
+    color: #11101d;
+    background-color: #fff;
+}
+
+.sidebar .sidebar-items li a mat-icon {
+    margin-right: 1vw;
+    margin-left: 1vw;
+}
+
+.sidebar .sidebar-footer {
+    position: absolute;
+    bottom: 4vh;
+    left: 0;
+
+    width: 100%;
+    height: 10%;
+    background-color: #060606;
+}
+
+.sidebar .sidebar-footer .profile {
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translateY(-3.5vh) translateX(2.75vh);
+
+    display: flex;
+    align-items: center;
+
+    color: #fff;
+    font-family: "Roboto", sans-serif;
+    font-size: 2vh;
+    font-weight: 400px;
+
+    transition: all 0.4s ease;
+}
+
+.sidebar .sidebar-footer .profile img {
+    border-radius: 5px;
+    height: 6.5vh;
+    width: 6.5vh;
+
+    transition: all 0.4s ease;
+}
+
+.sidebar .sidebar-footer .profile img:active {
+    background-color: #a5a5a5;
+    color: #11101d;
+    cursor: pointer;
+}
+
+.sidebar .sidebar-footer .profile .tooltip {
+    height: 5vh;
+    width: 13vw;
+
+    border-radius: 6px;
+    background-color: #fff;
+    color: #11101d;
+    text-align: center;
+
+    display:flex;
+    align-items: center;
+    justify-content: space-around;
+
+    transition: 0s;
+    opacity: 0;
+
+    pointer-events: none;
+
+    position: absolute;
+    transform: translateY(-50%);
+    top: 0;
+    left: 5vw;
+    z-index: 99;
+}
+
+.sidebar .sidebar-footer .profile:hover .tooltip {
+    transition: all 0.4s ease;
+    top: 50%;
+
+    opacity: 1;
+    animation-name: fadeInOpacity;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in;
+    animation-duration: 0.3s;
 }
 
 /* Responsive pour TELEPHONE */
@@ -268,5 +205,23 @@
         opacity: 90%;
     
         transition: all 0.5s ease;
+    }
+}
+
+@keyframes fadeInOpacity {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOutOpacity {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
     }
 }
