--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -7,7 +7,8 @@
       [style.animation-timing-function]="animationTimingFunction"
       [style.animation-duration]="animationDuration">MENU</span>
       <div class="sidebar-btn" (click)="toggleMenu()">
-        <mat-icon>menu</mat-icon>
+        <mat-icon *ngIf="isMenuOpened == false">menu</mat-icon>
+        <mat-icon *ngIf="isMenuOpened == true">close</mat-icon>
       </div>
     </div>
     <ul class="sidebar-items">
@@ -20,7 +21,16 @@
         [style.animation-duration]="animationDuration">
       </li>
       <li *ngFor="let item of sideMenuItems">
-        <a href="{{ item.path }}">
+        <a href="{{ item.path }}" *ngIf="item.targetBlank == 'non'">
+          <mat-icon>{{ item.iconName }}</mat-icon>
+          <span class="sidebar-item-accueil"
+          [style.opacity]="sidebarItemOpacity"
+          [style.animation-name]="animationName"
+          [style.animation-iteration-count]="animationIterationCount"
+          [style.animation-timing-function]="animationTimingFunction"
+          [style.animation-duration]="animationDuration">{{ item.pageName }}</span>
+        </a>
+        <a href="{{ item.path }}" *ngIf="item.targetBlank == 'oui'" target="_blank">
           <mat-icon>{{ item.iconName }}</mat-icon>
           <span class="sidebar-item-accueil"
           [style.opacity]="sidebarItemOpacity"
