--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,18 @@
-<div class="layout">
-    <app-side-menu></app-side-menu>
-    <router-outlet></router-outlet>
+<div class="main" [style.background-color]="backgroundColor">
+    <div class="layout">
+        <app-side-menu></app-side-menu>
+        <router-outlet></router-outlet>
+    </div>
+    
+    <div class="footer">
+        <div class="color-selector">
+            <button mat-button [matMenuTriggerFor]="menu" [style.background-color]="backgroundColor" class="color-selector-menu-button"><mat-icon>color_lens</mat-icon></button>
+            <mat-menu #menu="matMenu">
+                <button *ngFor="let button of colorSelectorButtons"
+                        (click)="setBackgroundColor(button.color)"
+                        class="color-selection-button"
+                        [style.background-color]="button.color"></button>
+            </mat-menu>
+        </div>
+    </div>
 </div>
-
-<app-footer></app-footer>
