--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,9 @@
 <div class="main">
-    <div class="reseaux">
-        <i class="fab fa-twitter-square"></i>
+    <div class="color-selector">
+        <button mat-button [matMenuTriggerFor]="menu"></button>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item>Item 1</button>
+            <button mat-menu-item>Item 2</button>
+        </mat-menu>
     </div>
 </div>
