--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,14 +1,103 @@
-app-footer {
-    position: absolute;
-    bottom: 0;
-
-    width: 100%;
-    height: 10vh;
-
-    z-index: 0;
+.main {
+    transition: all 0.4s ease;
 }
 
-.layout app-side-menu {
+.main .layout app-side-menu {
     position: absolute;
     z-index: 1;
+}
+
+.main .footer {
+    width: 100%;
+    height: 75px;
+
+    position: absolute;
+    bottom: 0;
+}
+
+.main .footer .color-selector {
+    position: absolute;
+    right: 20px;
+    top: 30px;
+}
+
+.main .footer .color-selector .color-selector-menu-button {
+    height: 25px;
+    width: 25px;
+
+    border-radius: 4px;
+    border-color: #000;
+    border-width: 2px;
+
+    box-shadow: 1px 1px 5px #000;
+
+    transition: all 0.2s ease;
+}
+
+.main .footer .color-selector .color-selector-menu-button:hover {
+    box-shadow: 2px 2px 5px #000;
+}
+
+.main .footer .color-selector .color-selector-menu-button:active {
+    box-shadow: 1px 1px 5px #000;
+}
+
+.main .footer .color-selector .color-selector-menu-button mat-icon {
+    text-align: center;
+    font-size: 20px;
+
+    position: absolute;
+    top: 5px;
+    left: 1px;
+}
+
+::ng-deep .mat-menu-panel {
+    background-color: #c0c0c0;
+    position: relative;
+    min-width: 1pw !important;
+    width: 120px;
+    min-height: 1px !important;
+    height: 55px;
+
+    margin-bottom: 10px;
+
+    box-shadow: 1px 1px 5px;
+}
+
+::ng-deep .mat-menu-content{
+    width: 100%;
+    
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+.color-selection-button {
+    position: relative;
+
+    height: 25px;
+    width: 25px;
+
+    margin: 5px 7px;
+
+    border-radius: 4px;
+    border-color: #000;
+    border-width: 2px;
+
+    box-shadow: 1px 1px 5px #000;
+
+    transition: all 0.2s ease;
+}
+
+.color-selected-check {
+    font-size: 12px;
+
+    position: absolute;
+    top: 50%;
+    transform: translateY(-6px);
+    left: -1.5px;
+}
+
+.color-selection-button:hover {
+    box-shadow: 2px 2px 5px #000;
 }
