--- a/src/app/components/accueil/accueil.component.css
+++ b/src/app/components/accueil/accueil.component.css
@@ -2,8 +2,6 @@
     .main{
         width: 100%;
         height: 100vh;
-    
-        background-color: #689d71;
 
         text-align: center;
     }
@@ -11,7 +9,7 @@
     .main .text {
         position: absolute;
         top: 25vh;
-        left: 30vw;
+        left: 27vw;
 
         display: flex;
         flex-direction: column;
@@ -28,7 +26,7 @@
     }
 
     .main .sous-titre {
-        padding-top: 10vh;
+        margin-top: 10vh;
         font-size: 5vh;
         font-style: italic;
     }
@@ -40,8 +38,6 @@
     .main{
         width: 100%;
         height: 100vh;
-    
-        background-color: #689d71;
         
         color: #f0f0f0;
         font-size: 5vh;
