--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @media (min-width: 426px) {
-    html, body { height: 100%; overflow: hidden; }
+    html, body { height: 100%; overflow: auto; }
     body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
