--- a/src/app/components/side-menu/side-menu.component.css
+++ b/src/app/components/side-menu/side-menu.component.css
@@ -21,6 +21,10 @@
     font-weight: 400px;
 }
 
+.sidebar .sidebar-header .sidebar-title {
+    user-select: none;
+}
+
 .sidebar .sidebar-header .sidebar-btn {
     position: absolute;
     right: 1.75vw;
@@ -145,21 +149,16 @@
     height: 6.5vh;
     width: 6.5vh;
 
+    cursor: pointer;
+
     transition: all 0.4s ease;
 }
 
 .sidebar .sidebar-footer .profile .tooltip {
-    height: 5vh;
-    width: 13vw;
-
     border-radius: 6px;
     background-color: #fff;
     color: #11101d;
     text-align: center;
-
-    display:flex;
-    align-items: center;
-    justify-content: space-around;
 
     transition: 0s;
     opacity: 0;
@@ -173,6 +172,26 @@
     z-index: 99;
 }
 
+#tooltip1 {
+    height: 5vh;
+    width: 75px;
+}
+
+#tooltip2 {
+    height: 5vh;
+    width: 180px;
+}
+
+#tooltip3 {
+    height: 5vh;
+    width: 267px;
+}
+
+#tooltip4 {
+    height: 5vh;
+    width: 197px;
+}
+
 .sidebar .sidebar-footer .profile:hover .tooltip {
     transition: all 0.4s ease;
     top: 50%;
@@ -182,6 +201,13 @@
     animation-iteration-count: 1;
     animation-timing-function: ease-in;
     animation-duration: 0.3s;
+}
+
+.tooltip-text {
+    position: absolute;
+    left: 10px;
+    top: 8px;
+    transition: all 0.4s ease;
 }
 
 /* Responsive pour TELEPHONE */
